Revert "Refactor the database partitions"
This reverts commit 7e517e7a960905598dedb74c5fad1bb3166e1dd8 and
also commit 6135d5f068c0b9cfc8fab6f0e24ba62622ed3a07.

Conflicts:
	dist/lib/conf/database/db.changelog-master.xml
	dist/lib/conf/database/wres.TimeSeriesTraceValue_v1.xml
	dist/lib/conf/database/wres.TimeSeriesTrace_v1.xml
	dist/lib/conf/database/wres.TimeSeriesValue_v2.xml
	src/wres/MainFunctions.java
	wres-io/src/wres/io/utilities/Database.java
	wres-system/src/wres/system/DatabasePartitions.java

Some minor changes were kept.

If you (developers/test machines) migrated your database anywhere
between 7e517e7a960905598dedb74c5fad1bb3166e1dd8 and this commit,
you will need to start with a fresh DB or a migrated-to-a-released
DB version.

The reason for backing out the change is the multiplication of run
times with the partitions refactoring in HEFS-style evaluations.

Refs #61488